[gd_scene load_steps=2 format=3 uid="uid://bpbi8kgwjcben"]

[ext_resource type="Script" uid="uid://dj0l7aukq0ijt" path="res://EmployeeHoverTooltip.gd" id="1_1moxk"]

[node name="EmployeeHoverTooltip" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_1moxk")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 81.0

[node name="AvatarTextureRect" type="TextureRect" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="RoleLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
